--- a/client/forum/src/App.css
+++ b/client/forum/src/App.css
@@ -1,6 +1,6 @@
 
 #root {
-  max-width: 1280px;
+  display: block;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
@@ -40,4 +40,7 @@
 
 .read-the-docs {
   color: #888;
+}
+h1 {
+  font-size: 32px;
 }
